# mini_social_network_on_django

./: .env.dev  .gitignore  README.md  databasediagram.drawio  entrypoint.sh  manage.py  prestart.sh  pyproject.toml  Диаграмма без названия.drawio
Diagrams/: databasediagram.drawio
ProgSocialNet/: asgi.py  settings.py  urls.py  wsgi.py
ProgSocialNet/config/: settings.py  urls.py
ProgSocialNet/src/profiles/: models.py
config/: asgi.py  settings.py  urls.py  wsgi.py
mini_social_network_on_django/: asgi.py  settings.py  urls.py  wsgi.py  Диаграмма без названия.drawio
