[tool.poetry]
name = "progsocialnet"
version = "0.1.0"
description = "Social network by django"
authors = ["tonyglaz"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
djangorestframework = "^3.14.0"
pillow = "^9.4.0"
psycopg2 = "^2.9.5"
djoser = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
